--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vanilla JavaScript Stopwatch</title>
-    <link rel="stylesheet" href="index.scss"> 
+    <link rel="stylesheet" href="/style/index.css">
+    <script defer src="./main.js"></script>
  </head>
   <body>
     <div class="wrapper">
       <h1>Stopwatch</h1>
       <h2>Vanilla JavaScript Stopwatch</h2>
-      <p><span id="seconds">00</span>:<span id="tens">00</span></p>
-      <button id="button-start">Start</button>
-      <button id="button-stop">Stop</button>
-      <button id="button-reset">Reset</button>
+
+      <p>
+        <span id="minutes">00</span>
+        :
+        <span id="seconds">00</span>
+      </p>
+
+      <button id="button-start" onclick= "start()">Start</button>
+      <button id="button-stop" onclick="stop()">Stop</button>
+      <button id="button-reset" onclick="reset()">Reset</button>
       </div>       
   </body>
 </html>
