--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <h2>Vanilla JavaScript Stopwatch</h2>
 
       <p>
-        <span id="minutes">00</span>
-        :
         <span id="seconds">00</span>
+        :
+        <span id="tens">00</span>
       </p>
 
       <button id="button-start" onclick= "start()">Start</button>
